[gd_scene format=3 uid="uid://plbk0hbameip"]

[ext_resource type="Script" uid="uid://1tipj8x0bi0x" path="res://lib/ui/settings/settings.gd" id="1_t4ec1"]
[ext_resource type="Texture2D" uid="uid://l6cie2u2qujs" path="res://generic/materials/textures/tile_diff.jpg" id="2_hb0dw"]
[ext_resource type="FontFile" uid="uid://dtoeseq6l76ld" path="res://generic/fonts/work_sans.ttf" id="2_vq776"]
[ext_resource type="PackedScene" uid="uid://83qbe1li047w" path="res://lib/ui/settings/s_menu/s_menu.tscn" id="4_f8k2f"]
[ext_resource type="AudioStream" uid="uid://crqguk32xkawu" path="res://lib/ui/sounds/pane_open.ogg" id="5_ailwr"]
[ext_resource type="AudioStream" uid="uid://btgnnweavsq0" path="res://lib/ui/sounds/pane_close.ogg" id="6_luauc"]
[ext_resource type="Shader" uid="uid://dv114f0yt1j24" path="res://generic/materials/shaders/static.gdshader" id="7_luauc"]
[ext_resource type="Texture2D" uid="uid://c3ta1dijhey7h" path="res://lib/player/materials/textures/hologram_mask.jpg" id="8_d8jhr"]

[sub_resource type="Gradient" id="Gradient_hb0dw"]
offsets = PackedFloat32Array(0.1, 1)
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_f8k2f"]
gradient = SubResource("Gradient_hb0dw")
fill_to = Vector2(0, 1)

[sub_resource type="Animation" id="Animation_t4ec1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BG:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CoreBox:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Open:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Close:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_vq776"]
resource_name = "appear"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BG:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CoreBox:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.049999997, 0.14999999, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0.19607843), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Open:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_f8k2f"]
resource_name = "disappear"
length = 0.4
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BG:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CoreBox:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.050000012, 0.15, 0.39999998),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.6862745), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Close:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hb0dw"]
_data = {
&"RESET": SubResource("Animation_t4ec1"),
&"appear": SubResource("Animation_vq776"),
&"disappear": SubResource("Animation_f8k2f")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hb0dw"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 10.0
bg_color = Color(0, 0, 0, 1)
border_width_top = 2
border_color = Color(0.5, 0.5, 0.5, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_luauc"]
content_margin_left = 20.0
content_margin_top = 7.0
content_margin_right = 20.0
content_margin_bottom = 7.0
bg_color = Color(0, 0.32394633, 0.57480913, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f8k2f"]
content_margin_left = 12.0
content_margin_top = 12.0
content_margin_right = 12.0
content_margin_bottom = 12.0
bg_color = Color(0, 0.3254902, 0.5764706, 1)
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d8jhr"]
content_margin_left = 10.0
content_margin_top = 2.0
content_margin_right = 10.0
content_margin_bottom = 2.0
bg_color = Color(0, 0.11333332, 0.2, 1)
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xyodn"]
content_margin_left = 10.0
content_margin_top = 2.0
content_margin_right = 10.0
content_margin_bottom = 2.0
bg_color = Color(0, 0.16999999, 0.3, 1)
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ailwr"]
content_margin_left = 12.0
content_margin_top = 2.0
content_margin_right = 12.0
content_margin_bottom = 2.0
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_d8jhr"]
shader = ExtResource("7_luauc")
shader_parameter/hologram_mask_texture = ExtResource("8_d8jhr")
shader_parameter/hologram_uv_scale = 146.0
shader_parameter/hologram_strength = 0.31
shader_parameter/hologram_exponent = 3.0
shader_parameter/hologram_speed = 0.5

[node name="Settings" type="CanvasLayer" unique_id=964415197]
script = ExtResource("1_t4ec1")

[node name="Debug" type="TextureRect" parent="." unique_id=1757149523]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_hb0dw")
stretch_mode = 1

[node name="BG" type="TextureRect" parent="." unique_id=816548512]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
texture = SubResource("GradientTexture2D_f8k2f")

[node name="Animations" type="AnimationPlayer" parent="." unique_id=886302283]
libraries/ = SubResource("AnimationLibrary_hb0dw")

[node name="CoreBox" type="VBoxContainer" parent="." unique_id=1312138695]
custom_minimum_size = Vector2(1000, 500)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -271.0
offset_right = 500.0
offset_bottom = 229.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="CoreBox" unique_id=1467542950]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_vq776")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_hb0dw")
text = "Settings"
uppercase = true

[node name="Scroller" type="ScrollContainer" parent="CoreBox" unique_id=835987863]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="SettingsBox" type="VBoxContainer" parent="CoreBox/Scroller" unique_id=1173576121]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="WindowMode" parent="CoreBox/Scroller/SettingsBox" unique_id=164433354 instance=ExtResource("4_f8k2f")]
layout_mode = 2
id = "window_mode"
title = "Window Mode"
options = Array[String](["windowed", "maximized", "full_screen"])

[node name="FPSLimit" parent="CoreBox/Scroller/SettingsBox" unique_id=1046975402 instance=ExtResource("4_f8k2f")]
layout_mode = 2
id = "fps_limit"
title = "FPS Limit"
options = Array[String](["30fps", "60fps", "144fps", "Unlimited"])

[node name="Shadows" parent="CoreBox/Scroller/SettingsBox" unique_id=1463439834 instance=ExtResource("4_f8k2f")]
layout_mode = 2
id = "shadows"
title = "Shadows"
options = Array[String](["off", "low", "medium", "high"])

[node name="Bloom" parent="CoreBox/Scroller/SettingsBox" unique_id=822291301 instance=ExtResource("4_f8k2f")]
layout_mode = 2
id = "bloom"
title = "Bloom"
options = Array[String](["on", "off"])

[node name="Foliage" type="Label" parent="CoreBox/Scroller/SettingsBox" unique_id=1342551341]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_vq776")
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_luauc")
text = "Foliage"
uppercase = true

[node name="FoliageDensity" parent="CoreBox/Scroller/SettingsBox" unique_id=38960530 instance=ExtResource("4_f8k2f")]
layout_mode = 2
id = "foliage_density"
title = "Foliage Density"
options = Array[String](["low", "medium", "high"])

[node name="FoliageRenderDist" parent="CoreBox/Scroller/SettingsBox" unique_id=174858389 instance=ExtResource("4_f8k2f")]
layout_mode = 2
id = "foliage_render_distance"
title = "Foliage Render Distance"
options = Array[String](["low", "medium", "high"])

[node name="Footer" type="HBoxContainer" parent="CoreBox" unique_id=1114932850]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Apply" type="Button" parent="CoreBox/Footer" unique_id=829876485]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_focus_color = Color(0, 0.3254902, 0.5764706, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_f8k2f")
theme_override_styles/pressed = SubResource("StyleBoxFlat_d8jhr")
theme_override_styles/hover = SubResource("StyleBoxFlat_xyodn")
theme_override_styles/focus = SubResource("StyleBoxFlat_ailwr")
text = "SAVE"

[node name="Cancel" type="Button" parent="CoreBox/Footer" unique_id=1258372105]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_focus_color = Color(0.24705882, 0.11372549, 0.4, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_f8k2f")
theme_override_styles/pressed = SubResource("StyleBoxFlat_d8jhr")
theme_override_styles/hover = SubResource("StyleBoxFlat_xyodn")
theme_override_styles/focus = SubResource("StyleBoxFlat_ailwr")
text = "CANCEL"

[node name="Open" type="AudioStreamPlayer" parent="." unique_id=420034705]
stream = ExtResource("5_ailwr")

[node name="Close" type="AudioStreamPlayer" parent="." unique_id=1304342152]
stream = ExtResource("6_luauc")

[node name="Static" type="ColorRect" parent="." unique_id=1983094111]
material = SubResource("ShaderMaterial_d8jhr")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[connection signal="pressed" from="CoreBox/Footer/Apply" to="." method="_on_apply_pressed"]
[connection signal="pressed" from="CoreBox/Footer/Cancel" to="." method="_on_cancel_pressed"]
